[project]
name = "litewax"
authors = [{name = "abuztrade", email = "abuz.work@gmail.com"}]
dynamic = ["version", "description"]
classifiers = ['Development Status :: 4 - Beta', 'Topic :: Communications :: Email', 'Operating System :: OS Independent', 'License :: OSI Approved :: MIT License', 'Programming Language :: Python :: 3', 'Programming Language :: Python :: 3.6', 'Programming Language :: Python :: 3.7', 'Programming Language :: Python :: 3.8', 'Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10', 'Intended Audience :: Developers', 'Intended Audience :: Customer Service', 'Intended Audience :: Financial and Insurance Industry']
dependencies = ['requests', 'libeospy', 'cloudscraper']
readme = "README.md"
license = {text = "MIT License"}